# hinbox

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  entity_examples.md  fasthtml.txt  justfile  polars_embeddings.md  profile-reflection-plan.md  pyproject.toml  requirements.txt  run.py  test.py  test_embeddings.py
.claude/: settings.local.json
.claude/agents/: michael-reviewer.md  stefan-reviewer.md
.github/scripts/: post_inline_comment.sh
.github/workflows/: claude-reviewer.yml  test.yml
configs/: README.md
configs/football/: config.yaml
configs/football/categories/: events.yaml  locations.yaml  organizations.yaml  people.yaml
configs/football/prompts/: events.md  locations.md  organizations.md  people.md  relevance.md
configs/guantanamo/: config.yaml
configs/guantanamo/categories/: events.yaml  locations.yaml  organizations.yaml  people.yaml
configs/guantanamo/prompts/: events.md  locations.md  organizations.md  people.md  profile_generation.md  profile_reflection.md  profile_update.md  relevance.md
configs/template/: config.yaml.template
configs/template/categories/: events.yaml.template  locations.yaml.template  organizations.yaml.template  people.yaml.template
configs/template/prompts/: events.md.template  locations.md.template  organizations.md.template  (+4 more)
data/entities/: events.jsonl  locations.jsonl  organizations.jsonl  people.jsonl
data/processed/: processed_articles.jsonl
migrations/: env.py
migrations/versions/: 72d2b0000b8a_initial_migration.py  73ae7f5dc49e_add_article_table.py
scripts/: __init__.py  check_articles.py  check_articles_parquet.py  eval_merges.py  format.sh  get_miami_herald_articles.py  get_nyt_articles.py  import_miami_herald_articles.py  init_domain.py  lint.sh  list_domains.py  reset_processing_status.py  seed_merge_candidates.py  seed_relevance_candidates.py  traces.py
src/: __init__.py  config_loader.py  constants.py  database.py  dynamic_models.py  embeddings.py  events.py  exceptions.py  extract_structure_and_rewrite.py  extractors.py  frontend.py  image_description_and_captioning.py  init_database.py  locations.py  logging_config.py  merge.py  mergers.py  models.py  organizations.py  people.py  process_and_extract.py  profiles.py  prompts.py  relevance.py  run.py  tags.py  terrible_orchestrator.py  types.py  utils.py  utils_compat.py
src/engine/: __init__.py  article_processor.py  bad_processor.py  extractors.py  match_checker.py  merge_dispute_agent.py  mergers.py  profiles.py  relevance.py
src/eval/: __init__.py  candidates.py  gold_labels.py  relevance_candidates.py  relevance_labels.py  scorer.py  seed.py
src/frontend/: CLAUDE.md  __init__.py  __main__.py  app_config.py  components.py  data_access.py  entity_helpers.py  filters.py  frontend.py  utils.py
src/processing/: article_processor.py
src/utils/: __init__.py  cache_utils.py  embeddings.py  error_handler.py  extraction.py  extraction_cache.py  file_ops.py  llm.py  logging.py  name_variants.py  outcomes.py  processing_status.py  profiles.py  provider_routing.py  quality_controls.py  terrible_helper.py  trace_schema.py  trace_writer.py
src/v2/: constants.py  events.py  extract_entities.py  extract_structure_and_rewrite.py  frontend.py  locations.py  models.py  organizations.py  people.py  process_and_extract.py  profiles.py  relevance.py  run.py  tags.py
tests/: __init__.py  conftest.py  test_canonical_name.py  test_cli_privacy_mode.py  test_domain_paths.py  test_entity_merger_merge_smoke.py  test_entity_merger_similarity.py  test_eval_candidates.py  test_eval_relevance.py  test_eval_scorer.py  test_extraction_cache.py  test_extraction_retry.py  test_frontend_versioning.py  test_llm_multiple_tool_calls.py  test_merge_dispute_agent_routing.py  test_models.py  test_name_variants.py  test_profile_grounding.py  test_profile_versioning.py  test_provider_routing.py  test_trace_writer.py
tests/embeddings/: __init__.py  test_cloud_provider.py  test_config_integration.py  test_manager.py
(+14 files in other folders)
