[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hinbox"
version = "0.1.0"
description = "A database for tracking events at Guantanamo Bay"
requires-python = ">=3.10"
dependencies = [
    "sqlmodel",
    "pydantic",
    "pyclean",
    "alembic",
    "requests",
    "tqdm>=4.67.1",
    "beautifulsoup4>=4.13.3",
    "playwright>=1.50.0",
    "aiohttp>=3.11.12",
    "litellm",
    "instructor",
    "zenml>=0.74.0",
    "spacy>=3.8.4",
    "python-fasthtml>=0.12.4",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",   # Linting
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
