[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hinbox"
version = "0.1.0"
description = "A database for tracking events at Guantanamo Bay"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "pyclean",
    "requests",
    "tqdm>=4.67.1",
    "beautifulsoup4>=4.13.3",
    "playwright>=1.50.0",
    "aiohttp>=3.11.12",
    "litellm",
    "instructor",
    "python-fasthtml>=0.12.4",
    "markdown>=3.7",
    "arrow>=1.3.0",
    "pyarrow>=19.0.1",
    "sentence-transformers>=3.4.1",
    "rapidfuzz>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",   # Linting
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]

[dependency-groups]
dev = ["deadcode>=2.4.1", "vulture>=2.14"]
