[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hinbox"
version = "0.1.0"
description = "A flexible, domain-configurable entity extraction system designed for historians and researchers"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pyclean",
    "requests",
    "tqdm>=4.67.1",
    "beautifulsoup4>=4.13.3",
    "playwright>=1.50.0",
    "aiohttp>=3.11.12",
    "litellm>1.72.4",
    "instructor",
    "python-fasthtml>=0.12.4",
    "markdown>=3.7",
    "arrow>=1.3.0",
    "pyarrow>=19.0.1",
    "rapidfuzz>=3.12.0",
    "numpy>=2.0.0,<3.0.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=3",
]
dev = [
    "pytest",
    "ruff",   # Linting
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long — handled by ruff format
]

[tool.ruff.lint.per-file-ignores]
"src/frontend/**" = ["F403", "F405"]  # FastHTML uses `from fasthtml.common import *`
"src/config_loader.py" = ["B019"]  # lru_cache on methods is intentional; instances are module-cached

[dependency-groups]
dev = [
    "deadcode>=2.4.1",
    "ipython>=8.37.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
    "ty>=0.0.1a9",
    "vulture>=2.14",
]
